# ascii_dungeon

./: .gitignore  .mcp.json  CMakeLists.txt  CMakePresets.json  OVERVIEW.md  THEME.md  ascii_rt_engine_v3.md  build_and_run.bat  vcpkg.json
.gemini/: settings.json
demo_projects/: index.json
demo_projects/simple-rpg/: project.json  scene.json
demo_projects/simple-rpg/palettes/buildings/: _category.json
demo_projects/simple-rpg/palettes/characters/: _category.json
editor/: .gitignore  build.ps1  dev.ps1  index.html  package-lock.json  package.json  run-dev.ps1  tailwind.config.js  tsconfig.json  vitest.config.ts
editor/palettes/buildings/: _category.json  small_house.prefab.json
editor/palettes/characters/: _category.json  goblin.prefab.json  player.prefab.json
editor/palettes/environment/: _category.json  house_1.prefab.json  wall.prefab.json
editor/palettes/items/: _category.json
editor/src/: App.tsx  index.css
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/capabilities/: default.json
editor/src-tauri/icons/: README.txt  icon.icns
editor/src-tauri/src/: commands.rs  engine_process.rs  ipc_bridge.rs  lib.rs  main.rs
editor/src/components/: AsciiViewport.tsx  ComponentBrowser.tsx  ComponentInspector.tsx  CustomPanel.tsx  DockLayout.tsx  DragOverlay.tsx  GameViewPanel.tsx  MenuBar.tsx  ModeAwarePanels.tsx  ModeSwitch.tsx  NewProjectDialog.tsx  NodeTree.tsx  Palette.tsx  PalettePanel.tsx  PlayModeToolbar.tsx  RuntimeInspector.tsx  TemplateBrowser.tsx  TypeCollectionPanel.tsx  TypeInspector.tsx  WebGPUViewport.tsx
editor/src/components/editor/: LuaCodeEditor.tsx
editor/src/components/layout/: MainPanel.tsx  Sidebar.tsx  StatusBar.tsx  index.ts
editor/src/components/nodes/: CustomNode.tsx  ExecutionControls.tsx  NodeEditor.tsx  NodePropertyInspector.tsx  VariableInspector.tsx  autoLayout.ts  useGraphHistory.ts
editor/src/components/render/: RenderPipelinePanel.tsx  index.ts
editor/src/components/ui/: Layout.tsx  Panel.tsx  Popup.tsx  Scrubber.tsx  ThemeProvider.tsx  index.ts
editor/src/engine/: System.ts  SystemManager.ts  events.ts  index.ts
editor/src/engine/brushes/: ObjectBrush.ts  TerrainBrush.ts  index.ts
editor/src/engine/core/: GlyphImage.ts  Rect2D.ts  Renderer2D.ts  index.ts  interfaces.ts
editor/src/engine/selection/: PrefabFactory.ts  SelectionRegion.ts  index.ts
editor/src/engine/systems/: GizmoSystem.ts  InputSystem.ts  RenderSystem.ts  SceneSystem.ts  SelectionSystem.ts
editor/src/engine/terrain/: TerrainPrefabRegistry.ts  TerrainRenderer.ts  index.ts
editor/src/hooks/: usePalette.ts  useProject.ts
editor/src/lib/: demoProjects.ts  filesystem.ts  templates.ts
editor/src/lib/audio/: ZzFXAudio.ts  index.ts
editor/src/lib/lua/: LuaRenderer.tsx  bindings.ts  loader.ts  panels.ts  runtime.ts  ui-components.ts
editor/src/lib/nodes/: bindings.ts  graphBridge.ts  types.ts
editor/src/lib/types/: TypeRegistry.ts
editor/src/renderer/: AsciiPostProcessor.ts  AsciiRenderer.ts  AsciiTextureRenderer.ts  BitmapFont.ts  Camera.ts  DemoScene.ts  Gizmo.ts  GizmoInteraction.ts  GlyphBuilder.ts  GlyphMeshBuilder.ts  PaletteRegistry.ts  PostProcessManager.ts  PostProcessPipeline.ts  Raycaster.ts  RenderLayer.ts  RenderTargetPool.ts  Scene.ts  SceneGridBuilder.ts  Terminal2DRenderer.ts  WebGPURenderer.ts  index.ts  types.ts
editor/src/renderer/shaders/: asciiPostProcess.wgsl  asciiQuad.wgsl  gizmo.wgsl  glyph.wgsl  grid.wgsl  grid2d.wgsl  shadowVSM.wgsl  sky.wgsl  voxel.wgsl  vsmBlur.wgsl  water.wgsl  wgsl.d.ts
editor/src/runtime/: PlayModeBridge.ts
editor/src/scripting/: Component.ts  asciiArt.ts  decorators.test.ts  decorators.ts  index.ts  palettes.ts  serialization.ts
editor/src/scripting/api/: animate.ts  environment.ts  index.ts  lighting.ts  render.ts
editor/src/scripting/components/: AIComponent.ts  AnimatorComponent.ts  AsciiComponent.ts  AudioComponent.ts  BehaviorComponent.ts  CameraComponent.ts  ColliderComponent.ts  DebugComponent.test.ts  DebugComponent.ts  EdgeTriggerComponent.ts  FloorGeneratorComponent.ts  GameDataComponent.ts  GlyphComponent.ts  HealthComponent.ts  InteractableComponent.ts  LightComponent.ts  PlayerControllerComponent.ts  TerrainComponent.ts  TickWanderAIComponent.ts  TransformComponent.ts  VisualComponent.ts  WanderAIComponent.ts  WorldManagerComponent.ts  index.ts
editor/src/scripting/runtime/: Debugger.ts  EntityBinding.ts  GameHooks.ts  GraphRunner.ts  GraphStorage.ts  HotReload.ts  PlayModeManager.ts  RuntimeManager.ts  SceneManager.test.ts  SceneManager.ts  ScriptBehaviors.ts  SignalTypes.ts  SubGraph.ts  TickSystem.ts  TimerManager.test.ts  TimerManager.ts  TransformCache.ts  (+20 more)
editor/src/stores/: editorStore.ts  engineState.ts  engineStore.ts  index.ts  subscriptions.ts  useCodeEditor.ts  useDragState.ts  useEngineState.ts  useFloatingWindows.ts  useNodeEditor.ts
editor/src/styles/: dock.css
editor/src/types/: fengari-web.d.ts
engine-mcp/: package-lock.json  package.json
engine-mcp/src/: index.ts
engine-mcp/src/tools/: components.ts  consistency.ts  dependencies.ts  docs.ts  nodes.ts  patterns.ts  playMode.ts  runtime.ts  types.ts
lua/: main.lua
shaders/: rt_bounce_miss.rmiss  rt_closesthit.rchit  rt_miss.rmiss  rt_raygen.rgen  rt_shadow.rmiss
src/: main.cpp
src/core/: vulkan_context.cpp  vulkan_context.hpp  window.cpp  window.hpp
src/ipc/: ipc_server.cpp  ipc_server.hpp
src/renderer/: acceleration.cpp  acceleration.hpp  buffer.cpp  buffer.hpp  rt_pipeline.cpp  rt_pipeline.hpp
templates/core/: engine-render.lua  engine-view.lua  template.lua  type.lua
templates/deckbuilder/: init.lua
templates/deckbuilder/types/: Card.lua  Deck.lua  Effect.lua
templates/isometric-rpg/: init.lua
templates/isometric-rpg/types/: Entity.lua  Item.lua  NPC.lua  Stats.lua
(+13 files in other folders)
